banner correction- clipping removed

--- a/wp-content/themes/ar-freight/scss/_inner-banner.scss
+++ b/wp-content/themes/ar-freight/scss/_inner-banner.scss
@@ -21,11 +21,12 @@
             // transform: skewY(-10deg);
             // margin-top: -182px;
             margin-top: -20px;
-            clip-path: polygon(0 0, 100% 0, 100% 50%, 0% 100%)
+            //clip-path: polygon(0 0, 100% 0, 100% 50%, 0% 100%)
         }
         img {
             width: 100%;
-            height: 700px;
+            height: 800px;
+           // height: 700px;
             object-fit: cover;
             @media all and (max-width: 1330px) {
                 height: 536px;
@@ -38,7 +39,7 @@
     &__image:after {
         content: "";
         display: block;
-        background-image: linear-gradient(-45deg, #003c5e, #0070b0);
+        //background-image: linear-gradient(-45deg, #003c5e, #0070b0);
         width: 100%;
         height: 100%;
         position: absolute;
@@ -94,7 +95,7 @@
     }
     &__head-block {
         position: absolute;
-        top: 29%;
+        top: 35%;
         z-index: 990;
         right: 0;
         left: 0;
@@ -106,6 +107,7 @@
     }
     &__content-image {
         float: right;
+        display: none;
         img {
             -webkit-box-shadow: 0px 2px 10px 1px #333333;
             -moz-box-shadow: 0px 2px 10px 1px #333333;
